--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,13 +4,13 @@ if(NOT TARGET score_lib_base)
   include("${SCORE_SOURCE_DIR}/cmake/ScoreExternalAddon.cmake")
 endif()
 
-project(score_addon_my_offline_process LANGUAGES CXX)
+project(score_addon_audiooracle LANGUAGES CXX)
 
 # General initialization
 score_common_setup()
 
 # Creation of the library
-add_library(score_addon_my_offline_process
+add_library(score_addon_audiooracle
         AudioOracle/AudioOracleFactory.cpp
         AudioOracle/AudioOracleFactory.hpp
 
@@ -19,7 +19,7 @@ add_library(score_addon_my_offline_process
 )
 
 # Link
-target_link_libraries(score_addon_my_offline_process PUBLIC score_lib_process score_plugin_media)
+target_link_libraries(score_addon_audiooracle PUBLIC score_lib_process score_plugin_media)
 
 # Target-specific options
-setup_score_plugin(score_addon_my_offline_process)
+setup_score_plugin(score_addon_audiooracle)
